assets/styles/application.css
body {
	margin: 0;
	/*height: 100%;
	width: 100%;*/
	font-family: 'Helvetica', 'Arial', sans-serif;
	/*background: #ffcced;*/
	/*background: rgba(0,255,0,1);*/
	min-width: 480px;
	position: relative;
	overflow: hidden;
	text-rendering: optimizeLegibility;
}
#front {
	position: absolute;
	top:0;
	left: 0;
	height: 100%;
	width: 100%;
	overflow-y: auto;
	color: rgba(0,0,0,1);
	-webkit-transition: color 500ms ease;
	-moz-transition: color 500ms ease;
	transition: color 500ms ease;
	-webkit-transform-origin: 50% top;
	-moz-transform-origin: 50% top;
	transform-origin: 50% top;
}
.zoom, .zoom #front  {
	overflow: hidden;
}
.zoom #front {
	color: rgba(0,0,0,.08);
	-webkit-touch-callout: none;
    -webkit-user-select: none;
    cursor: default;
}
#front #manifesto {
	width: 70%;
	max-width: 1200px;
	padding: 50px;
	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
#front #manifesto .copy {
	font-size: 35px;
	line-height: 60px;
	text-indent: 140px;
	font-weight: 700;
	text-align: justify;
    display: block;
    margin: 30px 0 0 30px;
    padding: 30px;
}
.inner {
	height: 100%;
	width: 80%;
	max-width: 1200px;
	min-width: 600px;
	/*display: table;
	margin: auto;*/
}
.inner .text {
	/*text-align: justify;
    text-justify: inter-word;*/
    
}
#manifesto .title {
	font-size: 75px;
	line-height: 85px;
	letter-spacing: 2px;
	font-weight: bolder;
	display: block;
	opacity: 0;
	-webkit-transition: opacity 70ms ease-in; 
   	-moz-transition: opacity 70ms ease-in; 
    -o-transition: opacity 70ms ease-in; 
    transition: opacity 70ms ease-in;
}
#manifesto .title.show {
	opacity: 1;
}
.word {
	-webkit-transition: opacity 70ms ease-in; 
   	-moz-transition: opacity 70ms ease-in; 
    -o-transition: opacity 70ms ease-in; 
    transition: opacity 70ms ease-in;
	padding: 5px;
}
.copy .word.show {
	opacity: 1;
}
body:not(.zoom) .word:hover {
	cursor: pointer;
}
.word.highlighted {
	background-color: rgba(254,234,94,1);
}
.copy .word {
	opacity: 0
}
.nav-link {
	color: black;
	opacity: 0;
	
	-webkit-transition: opacity 70ms ease-in; 
   	-moz-transition: opacity 70ms ease-in; 
    -o-transition: opacity 70ms ease-in; 
    transition: opacity 70ms ease-in;
}
.nav-link.show {
	opacity: 1;
	cursor: pointer;
}
#manifesto .nav-link {
	text-transform: uppercase;
	font-family: 'Perpetua';
	letter-spacing: 5px;
	border-bottom: 2px solid black;
	cursor: zoom-in;
}
#manifesto .nav-link.selected {
	color: black;
	-webkit-transition: all 300ms ease;
	-moz-transition: all 300ms ease;
	transition: all 300ms ease;
	cursor: zoom-out;
}
#manifesto #cursor {
	font-family: 'Baskerville';
	font-size: 45px;
	font-weight: 100;
	width: 0;
	display: none;
	overflow: visible;
    -webkit-animation: blink 800ms step-end infinite; /* Chrome, Safari, Opera */
}
@-webkit-keyframes blink {
    0% {
    	opacity: 0;
    }
    99
    100% {
    	background: 1;
    }
}
.zoom #manifesto .nav-link.selected:hover {

}
.zoom #manifesto .nav-link:not(.selected) {
	opacity: 0.08;
}
#tools {
	z-index: 100;
}
.locked #tools {
	position: fixed;
	right:0;
	top:0;
	left:auto;
	height: 100%;
	width: 200px;
}
.tool {
	position: fixed;
	width: 200px;
	overflow: hidden;
	background: #ecf4ec;
	opacity: 0;
	z-index: 100;
	border-radius: 8px;
	/*box-shadow: 0 0 5px 5px rgba(0,0,0,.3);*/
}
.tool.show {
	opacity: 1;
}
.locked #tools .tool {
	right: 0 !important;
	bottom: auto !important;
	left: auto !important;
	border-radius: 0;
}
.locked #tool .tool#navigator {
	top: 0 !important;
}
.locked .tool:not(.dragging) {
	/*transition: all 500ms ease !important;
	-moz-transition: all 500ms ease !important;
	-webkit-transition: all 500ms ease !important;*/
}
.tool.closed {
	height: 60px !important;
}
body:not(.locked) .tool.dragging, body:not(.locked) .tool:hover {
	cursor: move;
	opacity: 1;
}
.tool header {
	background: rgba(0,0,0,.04);
	padding: 10px;
	display: table;
	width: calc(100% - 20px);
	width: -moz-calc(100% - 20px);
	width: -webkit-calc(100% - 20px);
	height: 30px;
}
.tool header h1 {
	font-size: 25px;
	line-height: 25px;
	margin: 0;
	padding: 0;
	display: table-cell;
	vertical-align: middle;
}
.tool main {
	padding: 10px;
	display: table;
	width: 176px;
	height: 100%;
	border: 2px solid rgba(0,0,0,.04);
}
.tool .buttons {
	display: table;
	float: right;
	height: 30px;
}
.tool .buttons .button {
	display: table-cell;
	vertical-align: middle;
	font-size: 30px;
	line-height: auto;
	cursor: pointer;
	margin: 0 5px;
}
.tool section {
	display: table;
}
.tool h2 {
	font-size: 20px;
	line-height: 20px;
	margin: 20px 0 5px 0;
	padding: 0;
	font-weight: normal;
	opacity: .6;
	font-weight: 700 !important;
}
.tool #background h2 {
	margin-top: 10px;
}
.tool h3 {
	font-size: 18px;
	line-height: 18px;
	font-weight: 700 !important;
	margin: 0;
	padding: 0;
	font-weight: normal;
	cursor: pointer;
}
.tool select {
	display: block;
	width: 100%;
	background: white;
	/*height: 30px;*/
	font-size: 20px;
	outline: none;
	margin: 10px 0;
}
.tool#editor {
	right: 50px;
	top: 50px;
} 
.tool#navigator {
	right: 50px;
	bottom: 50px;
	transform: translateY(5000px);
	-moz-transform: -moz-translateY(5000px);
	-webkit-transform: -webkit-translateY(5000px);
}
.tool#navigator .nav-link.selected {
	text-decoration: underline;
}
.zoom .tool#navigator, .switching .tool#navigator {
	transform: translateY(0);
	-moz-transform: -moz-translateY(0);
	-webkit-transform: -webkit-translateY(0);
}


*[data-style="italic"] {
	font-style: italic !important;
}
*[data-style="underline"] {
	text-decoration: underline !important;
} 
*[data-style="strike"] {
	text-decoration: line-through !important;
}
*[data-style="outline"] {
   text-shadow:	-1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}


#underlines .square {
	background-position: center !important; 
}
*[data-underline="blue-squiggle"] {
	text-decoration: none !important;
	background-image: url(../img/underlines/blue-squiggle.png);
	background-repeat: repeat-x;
	background-position: bottom;
	background-size: auto 9px;
}



.square {
	width: 35px;
	height: 35px;
	margin:5px;
	float: left;
	cursor: pointer;
}
.square.selected {
	box-shadow: 0 0 1px rgba(0,0,0,.4);
}
*[data-color='blue'] {
	background-color: #008ecd;
}
*[data-color='green'] {
	background-color: #38ea80;
}
*[data-color='red'] {
	background-color: #ff4517;
}
*[data-color='white'] {
	background-color: rgba(240,255,240,.5);
}
*[data-color='yellow'] {
	background-color: #ffff71;
}
*[data-pattern='grid'] {
	background-image: url(../img/patterns/grid.png);
	background-size: 10px;
}
*[data-pattern='dot'] {
	background-image: url(../img/patterns/dot.png);
	background-size: 4px;
}
*[data-pattern='pink-diagonal'] {
	background-image: url(../img/patterns/pink-diagonal.png);
	background-size: 10px;
}
*[data-pattern='pink-x'] {
	background-image: url(../img/patterns/pink-x.png);
	background-size: 10px;
}
*[data-pattern='horz-cyan'] {
	background-image: url(../img/patterns/horz-cyan.png);
	background-size: 20px;
}
*[data-pattern='scattered-sticks'] {
	background-image: url(../img/patterns/scattered-sticks.png);
	background-size: 20px;
}

.tool .help {
	display: block;
	opacity: .5;
	font-size: 14px;
	line-height: 16px;
}
.tool #unselect {
	font-size: 14px;
	line-height: 14px;
	cursor: pointer;
}
.page {
	position: fixed;
	width: 100%;
	height: 100%;
	-webkit-transform: translateY(100%);
	-moz-transform: translateY(100%);
	transform: translateY(100%);
/*	-webkit-transition: -webkit-transform step-end 200ms;
	-moz-transition: -moz-transform step-end 200ms;
	transition: transform step-end 200ms;*/
	font-size: 45px;
	line-height: 50px;
	overflow-y: auto;
}
.page.selected {
	-webkit-transform: translateY(0);
	-moz-transform: translateY(0);
	transform: translateY(0);
	/*opacity: 1;
	z-index: 2;*/
}
.page .blocks .block.text {
	font-size: 20px;
	line-height: 35px;
	font-weight: 700;
	width: 420px !important;
	text-indent: 50px;
	/*text-align: justify;*/
}
.block.text .tag {
	text-decoration: underline;
	cursor: pointer;
}
.block.text .tag[data-style="strike"]:hover {
	text-decoration: none !important;
}

.page .blocks {
	padding: 100px 30px;
	display: table;
	margin: auto;
}
.page .blocks .block {
	width: 200px;
	margin-bottom: 20px; 
	display: block;
	float: left;
	opacity: 0;
	-webkit-transition: opacity 70ms ease-in, top 0, left 0; 
   	-moz-transition: opacity 70ms ease-in, top 0, left 0; 
    -o-transition: opacity 70ms ease-in, top 0, left 0; 
    transition: opacity 70ms ease-in, top 0, left 0;
}
.page .blocks .block.show {
	opacity: 1;
}
.page .blocks .block.hide {
	display: none;
}
.page .blocks .block.large {
	width: 420px;
}
.page .blocks .image img {
	width: 100%;
	cursor: zoom-in;
}
.page .blocks .image.large img {
	cursor: zoom-out;
}
.page .block.hide {
	display: none;
}
#imageViewer {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	opacity: .3;
	z-index: 0;
	background-repeat: no-repeat;
	background-position: center;
	display: none;
	background-color: rgba(255,255,255,0.9);
}
#imageViewer.hover {
	display: block;
	background-size: cover;
}
#imageViewer.clicked {
	display: block;
	background-size: auto 80%;
	opacity: 1;
	z-index: 5;
}

